--- a/src/app/components/vote/vote.component.html
+++ b/src/app/components/vote/vote.component.html
@@ -1,1 +1,7 @@
-<p>vote works!</p>
+<div class="votes">
+  <!-- <fa-icon [icon]="faCoffee" (click)="upVote()"></fa-icon>778<fa-icon [icon]="faCoffee" (click)="downVote()"></fa-icon>200 -->
+  <button class="btn btn-primary">
+    <fa-icon [icon]="faArrowUp" (click)="upVote()"></fa-icon> {{ upVotes }}
+  </button>
+  <button type="" class="btn btn-primary"><fa-icon [icon]="faArrowDown" (click)="downVote()"></fa-icon>{{ downVotes }}</button> 
+</div>
