--- a/src/app/components/quote-details/quote-details.component.html
+++ b/src/app/components/quote-details/quote-details.component.html
@@ -1,1 +1,7 @@
-<p>quote-details works!</p>
+<div *ngFor="let quote of quotes; let i = index">
+  <h4>
+    {{ quote.author }}
+  </h4>
+  <p>" {{ quote.text }} "</p>
+  <h6>{{ quote.uploadedBy }}</h6>
+</div>
