ft: changed noImpliitAny config to false

--- a/src/app/components/quote-details/quote-details.component.html
+++ b/src/app/components/quote-details/quote-details.component.html
@@ -1,7 +1,9 @@
-<div *ngFor="let quote of quotes; let i = index">
-  <h4>
-    {{ quote.author }}
-  </h4>
-  <p>" {{ quote.text }} "</p>
-  <h6>{{ quote.uploadedBy }}</h6>
+<div>
+    Uploaded on:
+</div>
+<div>
+    Upvotes:
+</div>
+<div>
+  Downvotes:
 </div>
