--- a/src/app/components/quote-form/quote-form.component.html
+++ b/src/app/components/quote-form/quote-form.component.html
@@ -1,41 +1,58 @@
 <section
   class="container-fluid border mt-4 w-50 justify-content-center align-items-center"
-  action=""
 >
+  <h2>Write your Quotes</h2>
   <!-- #ngForm="quoteForm" -->
-  <form action="" class="p-3 d">
+  <form #quoteForm="ngForm" (ngSubmit)="submitQuoteForm()" class="p-3 d">
     <div class="form-group">
       <label for="">Author</label>
-      <input type="text" name="" id="" class="form-control" placeholder="" />
+      <input
+        class="form-control"
+        type="text"
+        name="author"
+        id="author"
+        required
+        [(ngModel)]="newQuote.author"
+        #author="ngModel"
+      />
+      <div [hidden]="author.valid || author.pristine" class="alert alert-danger mt-1"> 
+        <p>Author is not valid</p>
+      </div>
     </div>
     <div class="form-group">
       <label for="">Quote</label>
-      <input
+      <textarea
+        name="quote"
         type="text"
         class="form-control"
-        name=""
-        id=""
-        placeholder="Enter quote text"
-      />
+        id="quote"
+        placeholder="Enter quoted text"
+        rows="4"
+        [(ngModel)]="newQuote.text"
+        required
+      ></textarea>
+      Quote: {{ newQuote.text }}
     </div>
     <div class="form-group">
       <label for="">Uploaded By</label> <br />
       <input
         type="text"
         class="form-control"
-        name=""
-        id=""
+        name="uploadedBy"
+        id="uploadedBy"
         placeholder="Enter your name"
+        [(ngModel)]="newQuote.uploadedBy"
         required
       />
+      Uploaded by: {{ newQuote.uploadedBy }}
     </div>
     <div class="text-center m-3">
       <label for="button"></label>
-      <input type="button" class="btn btn-primary" value="Add Quote" />
+      <button type="submit" class="btn btn-primary" value="">Add Quote</button>
     </div>
   </form>
 </section>
-
+<!-- 
 <section class="container">
   <h2>Quotes</h2>
   <div class="border">
@@ -48,5 +65,5 @@
       <button class="btn btn-primary m-3">Quote details</button>
     </div>
   </div>
-</section>
-<app-quote-details></app-quote-details>
+</section> -->
+<!-- <app-quote-details></app-quote-details> -->
