--- a/src/app/components/vote/vote.component.html
+++ b/src/app/components/vote/vote.component.html
@@ -1,9 +1,19 @@
-<div class="votes">
+<div class="d-flex votes ">
   <!-- <fa-icon [icon]="faCoffee" (click)="upVote()"></fa-icon>778<fa-icon [icon]="faCoffee" (click)="downVote()"></fa-icon>200 -->
-  <button class="btn btn-success m-3">
-    <fa-icon [icon]="faArrowUp" (click)="upVote()"></fa-icon> {{ upVotes }}
-  </button>
-  <button type="" class="btn btn-danger">
-    <fa-icon [icon]="faArrowDown" (click)="downVote()"></fa-icon>{{ downVotes }}
-  </button>
+  <div class="upvote m-3 d-flex bg-success">
+    <fa-icon
+      [icon]="faArrowUp"
+      class="btn btn-secondary"
+      (click)="upVote()"
+    ></fa-icon>
+    <h5 class="btn text-white bg-success"> {{ upVotes }}</h5>
+  </div>
+  <div class="downvote m-3 d-flex bg-danger">
+    <fa-icon
+      class="btn btn-secondary"
+      [icon]="faArrowDown"
+      (click)="downVote()"
+    ></fa-icon>
+    <h5 class="btn text-white bg-danger ms-2">{{ downVotes }}</h5>
+  </div>
 </div>
