ft: form clearing on submit

--- a/src/app/components/quote-details/quote-details.component.html
+++ b/src/app/components/quote-details/quote-details.component.html
@@ -1,9 +1,12 @@
 <div>
-    Uploaded on:
+    Uploaded on: {{uploadedDate()}}
 </div>
 <div>
-    Upvotes:
+    Upvotes: 
 </div>
 <div>
   Downvotes:
+</div>
+<div>
+  <button (click)="quoteDelete(true)" class="btn btn-danger m-3"> Delete Quote</button> 
 </div>
