--- a/src/app/components/quote-form/quote-form.component.html
+++ b/src/app/components/quote-form/quote-form.component.html
@@ -1,9 +1,9 @@
 <section
   class="container-fluid border mt-4 w-50 justify-content-center align-items-center"
 >
-  <h2>Write your Quotes</h2>
+  <h2>Write your Quote</h2>
   <!-- #ngForm="quoteForm" -->
-  <form #quoteForm="ngForm" (ngSubmit)="submitQuoteForm()" class="p-3 d">
+  <form #quoteForm="ngForm" (ngSubmit)="submitQuoteForm(quoteForm); quoteForm.resetForm()" class="p-3 d">
     <div class="form-group">
       <label for="">Author</label>
       <input
