--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,22 +1,28 @@
+<app-navbar></app-navbar>
 <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
 <!-- <app-quote-form></app-quote-form> -->
 <h3>Quotes</h3>
 <div *ngFor="let quote of quotes; let i = index" class="m-5 p-3 border">
   <div class="d-flex justify-content-between">
-   <h4>Author: {{ quote.author }}</h4> 
-    <fa-icon (click)="showDetails(i)" [icon]="faEllipsisV" class="btn btn-dark"></fa-icon>
+    <h4>Author: {{ quote.author }}</h4>
+    <app-sidebutton></app-sidebutton>
   </div>
+
   <p>" {{ quote.text }} "</p>
   <h6>Posted by: {{ quote.uploadedBy }}</h6>
   <app-vote></app-vote>
+
   <div class="text-center">
     <button class="btn btn-primary m-3" (click)="showDetails(i)">
       Quote details
     </button>
   </div>
-  <app-quote-details
-    *ngIf="quote.showDetails"
-    [quote]="quote"
-  ></app-quote-details>
+
+  <div *ngIf="quote.showDetails">
+    <app-quote-details [quote]="quote" (isComplete)="deleteQuote($event,i)"></app-quote-details>
+  </div>
 </div>
-<p *ngIf="quotes.length > 4">malalalalalal</p>
+<p *ngIf="quotes.length > 4">
+  There are {{ quotes.length }} quotes on this page
+</p>
+<app-footer></app-footer>
