--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -7,7 +7,13 @@
     id="quote-box"
     *ngFor="let quote of quotes; let i = index"
   >
-    <div *ngIf="quote.upvote == highest && quote.upvote > 0 ; then highlight else empty"></div>
+    <div
+      *ngIf="
+        quote.upvote == highest && quote.upvote > 0; 
+        then highlight;
+        else empty
+      "
+    ></div>
     <ng-template #highlight>
       <div appHighlight class="p-3">
         <div>
@@ -19,9 +25,9 @@
           <p>" {{ quote.text }} "</p>
           <h6>Posted by: {{ quote.uploadedBy }}</h6>
           <div class="durationFromUpload">
-            ~ {{ quote.createdOn |timeUploaded}} ago~
+            ~ {{ quote.createdOn | timeUploaded }} ago~
             <!-- {{quote.createdOn| date: 'short'}} -->
-        </div>
+          </div>
         </div>
         <div class="d-flex votes">
           <div class="upvote m-3 d-flex bg-success">
@@ -44,7 +50,6 @@
               {{ quote.downvote }}
             </button>
           </div>
-          
         </div>
 
         <div class="text-center">
@@ -72,8 +77,8 @@
           <p>" {{ quote.text }} "</p>
           <h6>Posted by: {{ quote.uploadedBy }}</h6>
           <div class="durationFromUpload">
-            ~ {{ quote.createdOn |timeUploaded}} ago~
-        </div>
+            ~ {{ quote.createdOn | timeUploaded }} ago~
+          </div>
         </div>
         <div class="d-flex votes">
           <div class="upvote m-3 d-flex bg-success">
@@ -96,9 +101,7 @@
               {{ quote.downvote }}
             </button>
           </div>
-          
         </div>
-        
 
         <div class="text-center">
           <button class="btn btn-primary m-3" (click)="showDetails(i)">
@@ -115,7 +118,6 @@
       </div>
     </ng-template>
   </div>
-
 
   <p *ngIf="quotes.length > 4">
     There are {{ quotes.length }} quotes on this page
